Finished Course Blurbs until spring semester is completed

--- a/education.html
+++ b/education.html
@@ -146,7 +146,7 @@
                             Towson University is a four-year higher education facility located in Towson, Maryland. Founded in 1866, Towson has strived to bring affordable education to the citizens of Maryland. As a  state school of Maryland, Towson incorporates a large amount of disciplines into its curriculum. Engineering, however, is not offered at Towson.
                             </p>
                             <p>
-                            Unlike Iowa State and Lafayette college, I really didn’t know what to expect for my time at Towson when I enrolled in Spring of 2013. The only thing I did know is that I needed to get away from Lafayette. The college that I thought would be my home for four wonderful years quickly turned into a prison that I desperately needed an escape from. Towson, with credits that would be able to transfer back to Lafayette, was good enough. However, my time at Towson had a number of pleasant surprises that, while not academic in nature, had a profound effect on me going forward. To put it quite simply, Towson University was my first experience with a culture different from that of Lafayette and my hometown. Towson, an affordable state university, attracted a much different set of people with a much different set of values than my 60k-a-year private college. I felt that there was a lot to learn in terms of work ethic, understanding different walks of life, and the massively underrated skill of having a good attitude towards life in general. Most importantly, Towson made me realize just how much I could grow if I simply opened my mind to the road less traveled. While I did not end up staying at Towson, my time there shaped what I look for in an education and career in ways that cannot be understated. 
+                            Unlike Iowa State and Lafayette college, I really didn’t know what to expect for my time at Towson when I enrolled in Spring of 2013. The only thing I did know is that I needed to get away from Lafayette. The college that I thought would be my home for four wonderful years quickly turned into a prison that I desperately needed an escape from. Towson, with credits that would be able to transfer back to Lafayette, was good enough. However, my time at Towson had a number of pleasant surprises that, while not academic in nature, had a profound effect on me going forward. To put it quite simply, Towson University was my first experience with a culture different from that of Lafayette and my hometown. Towson, an affordable state university, attracted a much different set of people with a much different set of values than my 60k-a-year private college. I felt that there was a lot to learn in terms of work ethic, understanding different walks of life, and the massively underrated skill of having a good attitude towards life in general. Most importantly, Towson made me realize just how much I could grow if I simply opened my mind to the road less traveled. While I did not end up staying at Towson, my time there shaped what I look for in an education and career in ways that cannot be understated.
 
                             </p>
                             </div>
@@ -467,7 +467,7 @@
                     <div class="col-5@xs col-5@sm shape card" data-school="towson" data-level="100-level" data-subject="MISC">
                         <div class="card-content">
                             <span class="card-title">Introduction to Logic</span>
-                            <p>Lorem Ipsum</p>
+                            <p>Overview of different forms of logic, with focus on aristotle and boolean</p>
                         </div>
                         <div class="card-action">
                             <div class="coursenum">Philosophy 111</div>
@@ -477,7 +477,8 @@
                     <div class="col-5@xs col-5@sm shape card" data-school="lafayette" data-level="100-level" data-subject="HIST">
                         <div class="card-content">
                             <span class="card-title">World History: 475-1695 CE</span>
-                            <p>Lorem Ipsum</p>
+                            <p>Introduction into historical thinking via history of the world. Starts at the end of the classical era
+														and moves through the dawn of globalisation</p>
                         </div>
                         <div class="card-action">
                             <div class="coursenum">History 115</div>
@@ -487,7 +488,7 @@
                     <div class="col-5@xs col-5@sm shape card" data-school="lafayette" data-level="200-level" data-subject="MISC">
                         <div class="card-content">
                             <span class="card-title">Calculus III</span>
-                            <p>Lorem Ipsum</p>
+                            <p>Math course taken at lafayette consistering of advanced calculus. Required for Computer Science Majors</p>
                         </div>
                         <div class="card-action">
                             <div class="coursenum">Math 265</div>
@@ -497,7 +498,8 @@
                     <div class="col-5@xs col-5@sm shape card" data-school="lafayette" data-level="100-level" data-subject="MISC">
                         <div class="card-content">
                             <span class="card-title">Chemistry I</span>
-                            <p>Lorem Ipsum</p>
+                            <p>Introduction level chemistry course. Students went over the basics of elements, molecular bonds, and other
+														freshmen-level subjects</p>
                         </div>
                         <div class="card-action">
                             <div class="coursenum">Chem 121</div>
@@ -507,7 +509,8 @@
                     <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="100-level" data-subject="MISC">
                         <div class="card-content">
                             <span class="card-title">Introduction to Food Safety and Nutrition</span>
-                            <p>Lorem Ipsum</p>
+                            <p>Science Elective taken at Iowa State University. Students were given extensive overview of nutrition, FDA regulations,
+														preservation techniques, and food saftey.</p>
                         </div>
                         <div class="card-action">
                             <div class="coursenum">FS HN 101</div>
@@ -517,7 +520,8 @@
                     <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="200-level" data-subject="MISC">
                         <div class="card-content">
                             <span class="card-title">Public Speaking</span>
-                            <p>Lorem Ipsum</p>
+                            <p>Public speaking course required for Iowa State University. Students were divided intro groups of 5 and made to give both
+														indvidual and group speeches and presentations.</p>
                         </div>
                         <div class="card-action">
                             <div class="coursenum">SP CM 212</div>
@@ -527,7 +531,10 @@
                     <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="300-level" data-subject="MISC">
                         <div class="card-content">
                             <span class="card-title">Engineering Statistics</span>
-                            <p>Lorem Ipsum</p>
+                            <p>
+															Statistics Course taken at Iowa State University. Students were given an in-depth education on statistics and the math
+                            	behind them.
+														</p>
                         </div>
                         <div class="card-action">
                             <div class="coursenum">Stat 305</div>
@@ -537,7 +544,8 @@
                     <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="200-level" data-subject="MISC">
                         <div class="card-content">
                             <span class="card-title">Intro to Weather and Climate</span>
-                            <p>Lorem Ipsum</p>
+                            <p>Science elective taken at Iowa State University. Students were given overview of weather diagnostic tools,
+														weather related events, and how climate change effects existing weather patterns. </p>
                         </div>
                         <div class="card-action">
                             <div class="coursenum">Agronomy 205</div>
@@ -547,7 +555,7 @@
                     <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="300-level" data-subject="HIST">
                         <div class="card-content">
                             <span class="card-title">The Classical Era</span>
-                            <p>Lorem Ipsum</p>
+                            <p>Students were given in depth look of near-eastern economic history from the rise of Sumeria to the fall of Western Rome</p>
                         </div>
                         <div class="card-action">
                             <div class="coursenum">History 304</div>
@@ -557,7 +565,7 @@
                     <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="300-level" data-subject="HIST">
                         <div class="card-content">
                             <span class="card-title">Early Modern England</span>
-                            <p>Lorem Ipsum</p>
+                            <p>Students were tasked with learning in-depth information of england from the reign of Henry VIII through the Glorious Revolution</p>
                         </div>
                         <div class="card-action">
                             <div class="coursenum">History 325</div>
@@ -567,10 +575,55 @@
                     <div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="400-level" data-subject="HIST">
                         <div class="card-content">
                             <span class="card-title">Colonial Era and the American Revolution</span>
-                            <p>Lorem Ipsum</p>
+                            <p>Students were education on America after the events of the French and Indian war through the American Revolution. Special
+														attention was given to troop movements and military strategy.</p>
                         </div>
                         <div class="card-action">
                             <div class="coursenum">History 451</div>
+                            <div class="location">Iowa State University</div>
+                        </div>
+                    </div>
+										<div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="300-level" data-subject="CS">
+                        <div class="card-content">
+                            <span class="card-title">Operating Systems</span>
+                            <p>Students were given an overview of operating system functionality, as well as asked implement a thread manager and page fault handler. Extensive time was
+														taken going over threading in both theoretical and practical implementations </p>
+                        </div>
+                        <div class="card-action">
+                            <div class="coursenum">Computer Science 352</div>
+                            <div class="location">Iowa State University</div>
+                        </div>
+                    </div>
+										<div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="400-level" data-subject="CS">
+                        <div class="card-content">
+                            <span class="card-title">Software Testing</span>
+                            <p>An in-depth look at different software testing techniques and their philosophies. At the end of the year, students were
+														put into groups and assigned a report on an advanced testing framework.</p>
+                        </div>
+                        <div class="card-action">
+                            <div class="coursenum">Software Engineering 417</div>
+                            <div class="location">Iowa State University</div>
+                        </div>
+                    </div>
+										<div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="300-level" data-subject="MISC">
+                        <div class="card-content">
+                            <span class="card-title">Violence in Latin American Culture</span>
+                            <p>A discussion-based course covering violence in Latin American culture from the Tupac Amaru Rebellion through the dirty wars.
+														Specific attention was given to nontraditional forms of violence and disapearences in the mid-late 20th century.</p>
+                        </div>
+                        <div class="card-action">
+                            <div class="coursenum">Anthropology 323A </div>
+                            <div class="location">Iowa State University</div>
+                        </div>
+                    </div>
+										<div class="col-5@xs col-5@sm shape card" data-school="iowa-state" data-level="300-level" data-subject="MISC">
+                        <div class="card-content">
+                            <span class="card-title">Social Culture of Technological Change</span>
+                            <p>Discussion-based class where students were asked to consider the affects of recent technological advancements on society.
+														specific topics include healthcare, net neutrality, income inequality, and consumer culture.</p>
+                        </div>
+                        <div class="card-action">
+                            <div class="coursenum">Philosophy 343 </div>
                             <div class="location">Iowa State University</div>
                         </div>
                     </div>
@@ -603,7 +656,7 @@
             </div>
             <div class="footer-copyright">
                 <div class="container">
-                    <span class="grey-text text-lighten-2">Summer 2016</span>
+                    <span class="grey-text text-lighten-2">Spring 2017</span>
                 </div>
             </div>
         </footer>
