Started work on "work experience" page. Basically added a new html page and started the basic structure

--- a/education.html
+++ b/education.html
@@ -22,7 +22,7 @@
                             <ul id="slide-out" class="side-nav blue text-header">
                                 <li><a href="website.html"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right;">account_circle</i></a></li>
                                 <li><a href="#!"><span class="white-text">Education</span><i class="material-icons md-24" style="float:right;">school</i></a></li>
-                                <li><a href="#!"><span class="white-text">Work Experience</span><i class="material-icons md-24" style="float:right;">work</i></a></li>
+                                <li><a href="work.html"><span class="white-text">Work Experience</span><i class="material-icons md-24" style="float:right;">work</i></a></li>
                                 <li><a href="#!"><span class="white-text">My Projects</span><i class="material-icons md-24" style="float:right;">memory</i></a></li>
                                 <li><a href="other_resources/MichaelSila_Resume_July2016.pdf" download><span class="white-text">Download Resume</span><i class="material-icons md-24" style="float:right;">get_app</i></a></li>
                                 <li><a href="https://www.linkedin.com/in/michaelarassilacs"><span class="white-text">Linkedin</span><i class="material-icons md-24" style="float:right;">link</i></a></li>
