--- a/work.html
+++ b/work.html
@@ -18,9 +18,9 @@
             <nav class="blue nav-wrapper">
                         <div>
                             <ul id="slide-out" class="side-nav blue text-header">
-                                <li><a href="#!"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right;">account_circle</i></a></li>
+                                <li><a href="website.html"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right;">account_circle</i></a></li>
                                 <li><a href="education.html"><span class="white-text">Education</span><i class="material-icons md-24" style="float:right;">school</i></a></li>
-                                <li><a href="work.html"><span class="white-text">Work Experience</span><i class="material-icons md-24" style="float:right;">work</i></a></li>
+                                <li><a href="#!"><span class="white-text">Work Experience</span><i class="material-icons md-24" style="float:right;">work</i></a></li>
                                 <li><a href="#!"><span class="white-text">My Projects</span><i class="material-icons md-24" style="float:right;">memory</i></a></li>
                                 <li><a href="other_resources/MichaelSila_Resume_July2016.pdf" download><span class="white-text">Download Resume</span><i class="material-icons md-24" style="float:right;">get_app</i></a></li>
                                 <li><a href="https://www.linkedin.com/in/michaelarassilacs"><span class="white-text">Linkedin</span><i class="material-icons md-24" style="float:right;">link</i></a></li>
@@ -28,14 +28,79 @@
                             <a href="#" data-activates="slide-out" class="button-collapse show-on-large blue"><i class="material-icons">menu</i></a>
                         </div>
                         <div class="header right text-header">
-                            <a href="website.html">Michael Sila  </a>
+                            <a href="work.html">Work</a>
                     </div>
 
                 </nav>
             </div>
         </header>
         <main>
+          <div class="page-body">
+            <div class="sub_section section">
+              <div class="blue sub-header">
+                  <span class="white-text date-range">July 2016 - Present</span>
+                  <h3 class="center white-text">Clearwater Analytics</h3>
+              </div>
+              <div class="container row">
+                  <div class="col l6 s12">
+                    <div><img src="images/work/clearwater.png" alt="" class="materialboxed"  height="100%" width="100%"></div>
+                  </div>
+                  <div class="col l6 s12">
+                    <p>Lorem Ipsum</p>
+                  </div>
+              </div>
+            </div>
+            <div class="sub_section section">
+              <div class="blue sub-header">
+                  <span class="white-text date-range">May 2016 - August 2016</span>
+                  <h3 class="center white-text">Clearwater Analytics (Summer Internship)</h3>
+              </div>
+                <div class="container row">
+                  <div class="col l6 s12">
+                    <div><img src="images/work/clearwater.png" alt="" class="materialboxed"  height="100%" width="100%"></div>
+                  </div>
+                  <div class="col l6 s12">
+                    <p>Lorem Ipsum</p>
+                  </div>
+              </div>
+            </div>
+            <div class="sub_section section">
+              <div class="blue sub-header">
+                  <span class="white-text date-range">May 2015 - August 2016</span>
+                  <h3 class="center white-text">Compressor Controls Corp (Internship)</h3>
+              </div>
+                <div class="container row">
+                  <div class="col l6 s12">
+                    <div><img src="images/work/CCC.png" alt="" class="materialboxed" ></div>
+                  </div>
+                  <div class="col l6 s12">
+                    <p>Lorem Ipsum</p>
+                  </div>
+              </div>
+            </div>
+            <div class="sub_section section">
+              <div class="blue sub-header">
+                  <h3 class="center white-text">Applicable Skills</h3>
+              </div>
+                <div>
 
+                  <ul class="collapsible" data-collapsible="accordian">
+                    <li>
+                      <div class="collapsible-header"><i class="material-icons">filter_drama</i>First</div>
+                      <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+                    </li>
+                    <li>
+                      <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
+                      <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+                    </li>
+                    <li>
+                      <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
+                      <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+                    </li>
+                  </ul>
+                </div>
+            </div>
+          </div>
         </main>
         <footer class="page-footer blue">
             <div class="container">
