Did some work over break. Mainly writing stuff up

--- a/work.html
+++ b/work.html
@@ -46,7 +46,13 @@
                     <div><img src="images/work/clearwater.png" alt="" class="materialboxed"  height="100%" width="100%"></div>
                   </div>
                   <div class="col l6 s12">
-                    <p>Lorem Ipsum</p>
+                    <p>Clearwater Analytics is a financial technology startup with headquarter in the heart of Boise, Idaho. Clearwater provides web-based portfolio management for thousands of Clients. Customers who utilize their platform include Facebook, Cisco, and Oracle. </p>
+                    <p>
+                      Internally, Clearwater puts great emphasis on staying at the forefront of web technologies. An agile development process is used with weekly training seminars during lunch to ensure developer’s skills stay sharp. While the exact technologies used vary by team, popular frameworks include: Java 8, Jersey 1 & 2,  Microsoft SQL Server, Angular JS 1 & 2, JQuery, MongoDB, and a plethora of other technologies.
+                      </p>
+                      <p>
+                          I am starting work at Clearwater full time with the title of <b>Software Engineer</b> on July 10th, 2016. Wish me luck!
+                      </p>
                   </div>
               </div>
             </div>
