Description for Clearwater Analytics (Internship)

--- a/work.html
+++ b/work.html
@@ -66,7 +66,9 @@
                     <div><img src="images/work/clearwater.png" alt="" class="materialboxed"  height="100%" width="100%"></div>
                   </div>
                   <div class="col l6 s12">
-                    <p>Lorem Ipsum</p>
+                    <p>I interned at Clearwater Analytics in the summer of 2016. The intern team consisted of seven interns with two full time employees as team leads. The team initially worked on a project that utilized RESTful endpoints, a T-SQL database, RabitMQ Queue, and a frontend composed of Angular1 framework. </p>
+                    <p>After approximately a month, this project was moved into the integration testing phases. While a portion of our team was needed to complete this, four of our group moved onto a series of sprints focused on improving a legacy product. This product was used by client services to keep track of important metrics and information of Clearwater clients. The stack consisted of a T-SQL DB, a java backend, and a JQuery frontend. Our team made three major improvements: Updating monthly updates of usage statistics to daily updates, changing values shown from approximations to fully accurate ones, and implementing a prototype scoring system for client services’ internal performance metrics. </p>
+                      <p>At Clearwater, I not only was able to obtain skills that improved my ability as a software developer, but allowed me to produce real, useful, work in a professional environment. </p>
                   </div>
               </div>
             </div>
