--- a/work.html
+++ b/work.html
@@ -3,6 +3,7 @@
 
 <head>
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css" media="screen,projection">
     <link rel=stylesheet href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,7 +14,7 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="javas.js"></script>
     <!-- Naviagtion Menu -->
     <header>
@@ -21,7 +22,7 @@
             <nav class="blue nav-wrapper">
                 <div>
                     <ul id="slide-out" class="side-nav blue text-header">
-                        <li><a href="website.html"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right;">account_circle</i></a></li>
+                        <li><a href="index.html"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right;">account_circle</i></a></li>
                         <li><a href="education.html"><span class="white-text">Education</span><i class="material-icons md-24" style="float:right;">school</i></a></li>
                         <li><a href="#!"><span class="white-text">Work Experience</span><i class="material-icons md-24" style="float:right;">work</i></a></li>
                         <li><a href="#!"><span class="white-text">My Projects</span><i class="material-icons md-24" style="float:right;">memory</i></a></li>
@@ -166,6 +167,12 @@
                             <div class="collapsible-header"><i class="material-icons">directions_run</i>Agile Development</div>
                             <div class="collapsible-body">
                                 <p>Lorem ipsum dolor sit amet.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="collapsible-header"><i class="fa fa-database" aria-hidden="true"></i>SQL</div>
+                            <div class="collapsible-body">
+                                <p>Lorem Ipsum</p>
                             </div>
                         </li>
                     </ul>
