solved problem. full fix tomorrow

--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
 </head>
 
 <body>
-
     <!-- Naviagtion Menu -->
     <header>
-        <div class="navbar-fixed">
-            <nav class="blue nav-wrapper">
+            <nav class="blue nav-wrapper hide-on-med-and-down">
                 <div>
                     <ul id="slide-out" class="side-nav blue text-header">
                         <li><a href="#!"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right;">account_circle</i></a></li>
@@ -37,7 +35,6 @@
                 </div>
 
             </nav>
-        </div>
     </header>
     <main>
 
