--- a/education.html
+++ b/education.html
@@ -9,33 +9,33 @@
          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
                      <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
-    <script src="javas.js"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/Shuffle/4.0.0/shuffle.js"></script
+         <script src="javas.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/Shuffle/4.0.0/shuffle.js"></script>
 
 	</head>
 	<body class="white">
 
         <!-- Naviagtion Menu -->
         <header class="">
-            <div class="navbar-fixed">
-                <nav class="blue nav-wrapper fixed">
-                        <div>
-                            <ul id="slide-out" class="side-nav blue text-header">
-                                <li><a href="website.html"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right;">account_circle</i></a></li>
-                                <li><a href="#!"><span class="white-text">Education</span><i class="material-icons md-24" style="float:right;">school</i></a></li>
-                                <li><a href="work.html"><span class="white-text">Work Experience</span><i class="material-icons md-24" style="float:right;">work</i></a></li>
-                                <li><a href="#!"><span class="white-text">My Projects</span><i class="material-icons md-24" style="float:right;">memory</i></a></li>
-                                <li><a href="other_resources/MichaelSila_Resume_July2016.pdf" download><span class="white-text">Download Resume</span><i class="material-icons md-24" style="float:right;">get_app</i></a></li>
-                                <li><a href="https://www.linkedin.com/in/michaelarassilacs"><span class="white-text">Linkedin</span><i class="material-icons md-24" style="float:right;">link</i></a></li>
-                            </ul>
-                            <a href="#" data-activates="slide-out" class="button-collapse show-on-large blue"><i class="material-icons">menu</i></a>
-                        </div>
-                        <div class="header right text-header">
-                            <a href="education.html" >Education</a>
-                    </div>
+                       <nav class="blue nav-wrapper hide-on-med-and-down">
+                <div>
+                    <ul id="slide-out" class="side-nav blue text-header">
+                        <li><a href="#!"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right;">account_circle</i></a></li>
+                        <li><a href="education.html"><span class="white-text">Education</span><i class="material-icons md-24" style="float:right;">school</i></a></li>
+                        <li><a href="work.html"><span class="white-text">Work Experience</span><i class="material-icons md-24" style="float:right;">work</i></a></li>
+                        <li><a href="#!"><span class="white-text">My Projects</span><i class="material-icons md-24" style="float:right;">memory</i></a></li>
+                        <li><a href="other_resources/MichaelSila_Resume_July2016.pdf" download><span class="white-text">Download Resume</span><i class="material-icons md-24" style="float:right;">get_app</i></a></li>
+                        <li><a heref="https://github.com/MichaelSila"><span class="white-text">GitHub</span><i class="devicon-github-plain colored" style="float:right; color:white; margin-top:9%;"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/michaelarassilacs"><span class="white-text">Linkedin</span><i class="material-icons md-24" style="float:right;">link</i></a></li>
 
-                </nav>
-            </div>
+                    </ul>
+                    <a href="#" data-activates="slide-out" class="button-collapse show-on-large blue"><i class="material-icons">menu</i></a>
+                </div>
+                <div class="header right text-header">
+                    <a href="index.html">Michael Sila  </a>
+                </div>
+
+            </nav>
         </header>
         <main>
             <div class="page-body">
