--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 </head>
 
 <body>
-    <!-- Naviagtion Menu -->
+       <!-- Naviagtion Menu -->
     <header>
-            <nav class="blue nav-wrapper hide-on-med-and-down">
+                    <nav class="blue nav-wrapper hide-on-med-and-down">
                 <div>
-                    <ul id="slide-out" class="side-nav blue text-header">
-                        <li><a href="#!"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right;">account_circle</i></a></li>
-                        <li><a href="education.html"><span class="white-text">Education</span><i class="material-icons md-24" style="float:right;">school</i></a></li>
-                        <li><a href="work.html"><span class="white-text">Work Experience</span><i class="material-icons md-24" style="float:right;">work</i></a></li>
-                        <li><a href="#!"><span class="white-text">My Projects</span><i class="material-icons md-24" style="float:right;">memory</i></a></li>
-                        <li><a href="other_resources/MichaelSila_Resume_July2016.pdf" download><span class="white-text">Download Resume</span><i class="material-icons md-24" style="float:right;">get_app</i></a></li>
-                        <li><a heref="https://github.com/MichaelSila"><span class="white-text">GitHub</span><i class="devicon-github-plain colored" style="float:right; color:white; margin-top:9%;"></i></a></li>
-                        <li><a href="https://www.linkedin.com/in/michaelarassilacs"><span class="white-text">Linkedin</span><i class="material-icons md-24" style="float:right;">link</i></a></li>
+                    <ul id="slide-out" class="side-nav blue text-header text-white">
+                        <li><a href="#!"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right; color:white;">account_circle</i></a></li>
+                        <li><a href="education.html"><span class="white-text">Education</span><i class="material-icons md-24" style="float:right; color:white;">school</i></a></li>
+                        <li><a href="work.html"><span class="white-text">Work Experience</span><i class="material-icons md-24" style="float:right; color:white;">work</i></a></li>
+                        <li><a href="#!"><span class="white-text">My Projects</span><i class="material-icons md-24" style="float:right; color:white;">memory</i></a></li>
+                        <li><a href="other_resources/MichaelSila_Resume_July2016.pdf" download><span class="white-text  ">Download Resume</span><i class="material-icons md-24" style="float:right; color:white;">get_app</i></a></li>
+                        <li><a heref="https://github.com/MichaelSila"><span class="white-text">GitHub</span><i class="devicon-github-plain colored" style="float:right; color:white;"></i></a></li>
+                        <li><a href="https://www.linkedin.com/in/michaelarassilacs"><span class="white-text">Linkedin</span><i class="material-icons md-24" style="float:right; color:white;">link</i></a></li>
 
                     </ul>
                     <a href="#" data-activates="slide-out" class="button-collapse show-on-large blue"><i class="material-icons">menu</i></a>
