--- a/education.html
+++ b/education.html
@@ -7,6 +7,7 @@
         <link rel=stylesheet href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+                 <script src="https://cdnjs.cloudflare.com/ajax/libs/Shuffle/4.0.0/shuffle.js"></script>
 
 
 	</head>
@@ -14,7 +15,7 @@
              <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Shuffle/4.0.0/shuffle.js"></script>
-            <script src="javas.js"></script>
+        <script src="javas.js"></script>
             
     <!-- Naviagtion Menu -->
     <header>
