--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+        <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
        <!-- Naviagtion Menu -->
     <header>
                     <nav class="blue nav-wrapper hide-on-med-and-down">
@@ -24,7 +25,7 @@
                         <li><a href="work.html"><span class="white-text">Work Experience</span><i class="material-icons md-24" style="float:right; color:white;">work</i></a></li>
                         <li><a href="#!"><span class="white-text">My Projects</span><i class="material-icons md-24" style="float:right; color:white;">memory</i></a></li>
                         <li><a href="other_resources/MichaelSila_Resume_July2016.pdf" download><span class="white-text  ">Download Resume</span><i class="material-icons md-24" style="float:right; color:white;">get_app</i></a></li>
-                        <li><a heref="https://github.com/MichaelSila"><span class="white-text">GitHub</span><i class="devicon-github-plain colored" style="float:right; color:white;"></i></a></li>
+                        <li><a href="https://github.com/MichaelSila"><span class="white-text">GitHub</span><i class="devicon-github-plain colored" style="float:right; color:white;"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/michaelarassilacs"><span class="white-text">Linkedin</span><i class="material-icons md-24" style="float:right; color:white;">link</i></a></li>
 
                     </ul>
