--- a/work.html
+++ b/work.html
@@ -124,19 +124,26 @@
                         <li>
                             <div class="collapsible-header"><i class="devicon-java-plain"></i>Java </div>
                             <div class="collapsible-body">
-                                <p>Lorem ipsum dolor sit amet.</p>
+                                <p>My experience in it can be divided into two categories:  academic, and professional. Academically, Java has a special place in my heart. Not only was Java the 1st language I learned on, but I also programmed the majority of projects during my university days in Java.
+                                </p>
+                                <p>Professionally, I am less tied to sentimental feelings. However, my company does use Java 8 EE for the vast majority its backend code. This has given me experience in Java well beyond what I could have learned in university classrooms. Some libraries in use are guice dependency injection, the jesery2 framework, and various custom internal libraries. Learning these, these along with design patterns and business logic, is continually improving my skills in Java. 
+                                </p>
                             </div>
                         </li>
                         <li>
                             <div class="collapsible-header"><i class="devicon-javascript-plain"></i>javascript</div>
                             <div class="collapsible-body">
-                                <p>Lorem ipsum dolor sit amet.</p>
+                                <p>	I learned the vast majority of my javascript knowledge upon beginning my employment at Clearwater Analytics. My work tends to use a menagerie of javascript frameworks to create the UI of both client-facing applications and internal tools. At my time at Clearwater, I have worked in Angular1,Jquery, along with the tiniest bit of Node.js. </p>
+                                <p>Javascript is an...interesting language. I don’t feel outspoken nor afraid when saying there are many things wrong with the platform. In many ways, I find it oddly similar to C++ in that it has completely overgrown its original purpose and can cause serious issues if used incorrectly. That being said, there can be no denying Javascript’s reach and impact on the software development world. </p>
                             </div>
                         </li>
                         <li>
                             <div class="collapsible-header"><i class="devicon-python-plain"></i>Python</div>
                             <div class="collapsible-body">
-                                <p>Lorem ipsum dolor sit amet.</p>
+                                <p>	Unlike much of my knowledge, my primary vehicle of experience and knowledge of python is through personal projects.  While I will occasionally code in Java in my spare time, out of either familiarity or a perceived shortcoming in a specific area not covered by my job, python is my language of choice outside of work. This is mainly because python allows development of an application quickly, without much of the boilerplate that defines other languages.</p>
+                                <p>
+                                    While most of my experience of python comes from a hobbyist's perspective, I would recommend it in many scenarios. Python not be as extensible, performant, or easy to develop on an enterprise level, as Java. However, there are many projects and companies that are looking for quick deployment without much of the baggage other languages carry. Python is an amazing language, so long as it’s not shoehorned into situations where it doesn’t belong.
+                                </p>
                             </div>
                         </li>
                         <li>
