--- a/education.html
+++ b/education.html
@@ -20,7 +20,7 @@
     <!-- Naviagtion Menu -->
     <header>
                        <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
-        <nav class="blue nav-wrapper hide-on-med-and-down">
+        <nav class="blue nav-wrapper">
                 <div>
                     <ul id="slide-out" class="side-nav blue text-header text-white">
                         <li><a href="#!"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right; color:white;">account_circle</i></a></li>
