--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
        <!-- Naviagtion Menu -->
     <header>
-                    <nav class="blue nav-wrapper hide-on-med-and-down">
+                    <nav class="blue nav-wrapper">
                 <div>
                     <ul id="slide-out" class="side-nav blue text-header text-white">
                         <li><a href="#!"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right; color:white;">account_circle</i></a></li>
