--- a/work.html
+++ b/work.html
@@ -19,7 +19,7 @@
 <body>
     <!-- Naviagtion Menu -->
     <header>
-                    <nav class="blue nav-wrapper hide-on-med-and-down">
+                    <nav class="blue nav-wrapper">
                 <div>
                     <ul id="slide-out" class="side-nav blue text-header text-white">
                         <li><a href="#!"><span class="white-text">About Me</span><i class="material-icons md-24" style="float:right; color:white;">account_circle</i></a></li>
